--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.admin.musicplayerservice.MainActivity">
+    tools:context="com.example.admin.musicplayerservice.RecyclerActivity"
+    android:orientation="vertical">
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnGoToRecycler"
-        android:text="Go To Recycler"
-        android:onClick="buttonClicked"/>
+        android:id="@+id/tv"
+        android:text="Plants:"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvPlanetList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
